--- a/src/pages/dashboard/dashboardPage.css
+++ b/src/pages/dashboard/dashboardPage.css
@@ -1,4 +1,6 @@
 .dashboard-container {
+    display: flex;
+    justify-content: center;
     width: 100%;
     height: 100vh;
 }
@@ -157,13 +159,19 @@
 .settings-form {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin-top: 20px;
     margin-bottom: 10px;
     box-shadow: 0 0 5px 0 lightgrey;
-    background-color: #2f2f30;
+    background-color: transparent;
     width: 400px;
     padding: 10px;
     font-size: 16px;
+    backdrop-filter: blur(10px);
+}
+
+h1{
+    color: rgb(146, 42, 146);
 }
 
 .settings-form button {
