--- a/src/pages/auth/authPage.css
+++ b/src/pages/auth/authPage.css
@@ -2,8 +2,25 @@
     width: 100%;
     height: 100vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #0b336b;
+}
+
+img{
+    border-radius: 50%;
+    height: 10vh;
+    width: 10vh;
+}
+
+.auth-form-logo-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .login-container,
@@ -21,6 +38,9 @@
     padding: 25px;
 }
 
+label{
+    color: #0bdf1c;
+}
 
 .auth-form {
     display: flex;
@@ -30,9 +50,13 @@
 }
 
 .auth-form input {
-    margin: 5px 0;
-    padding: 5px;
-    width: 400px;
+        text-align: center;
+        border: 2px solid rgb(148, 11, 148);
+        color: rgb(148, 11, 148);
+        border-radius: 3rem;
+        margin: 1vh;
+        width: auto
+    
 }
 
 .auth-form button {
