--- a/src/pages/auth/authPage.css
+++ b/src/pages/auth/authPage.css
@@ -25,7 +25,8 @@ img{
 
 .login-container,
 .register-container {
-    width: 500px;
+    background-color: rgba(255, 255, 255, 0.5); /* Fondo semitransparente */
+    width: 60%;
     margin: 0 auto;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -34,8 +35,9 @@ img{
     align-items: center;
     justify-content: space-evenly;
     height: auto;
-    box-shadow: 10px 10px 10px #0b336b;
+    box-shadow: 10px 10px 10px #000;
     padding: 25px;
+    color: rgb(148, 11, 148);
 }
 
 label{
@@ -49,27 +51,68 @@ label{
     justify-content: center;
 }
 
-.auth-form input {
-        text-align: center;
+.input-box{
+    width: 80%; 
+    height: 50px;
+    margin:10px;
+    padding: 10px;
+    position: relative;
+}
+
+.input-box input {
+        text-align: left;
         border: 2px solid rgb(148, 11, 148);
         color: rgb(148, 11, 148);
-        border-radius: 3rem;
+        border-radius: 40px;
         margin: 1vh;
-        width: auto
-    
+        width: 60%;
+        height: 50%;
+        background-color: transparent;
+        font-size: 10px;
+}
+
+.input-box input:hover{
+    border: 2px solid rgb(13, 182, 19);
+    color: rgb(13, 182, 19);
+}
+
+.input-box .icon{
+    position: absolute;
+    transform: translatex(-10%);
+    top: 50%;
+    transform: translateY(80%);
+    color: rgb(148, 11, 148);
+}
+
+.login-container .remember-forgot{
+    display: flex;
+    justify-content:  space-between;
+    font-size: 14px;
+    margin: 25px;
+}
+
+.remember-forgot a{
+    color: #fff;
+    text-decoration: underline;
+    margin-left: 4vh;
+}
+
+.remember-forgot{
+    accent-color: #fff;
+    margin-right: 4px;
 }
 
 .auth-form button {
     cursor: pointer;
-    background-color: #0b336b;
+    background-color: rgb(13, 182, 19);
     /* Twitch Purple */
     color: #fff;
     border: none;
     border-radius: 8px;
-    width: 410px;
+    width: 80px;
     height: 30px;
     font-weight: 500;
-    margin-top: 20px;
+    margin-top: 5px;
     transition: 0.3s;
     line-height: 10px;
 }
@@ -90,6 +133,7 @@ label{
 .auth-form-logo-container {
     font-size: 26px;
     font-weight: bold;
+    color: rgb(148, 11, 148);
 }
 
 .auth-form-switch-label {
@@ -107,5 +151,66 @@ label{
 
 .auth-form-validation-message {
     width: 400px;
-    color: red;
+    background-color: #fff;
+}
+
+.eye{
+    width: 100px;
+    height: 50px;
+    background: transparent;
+    display: inline-block;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    border: 1px solid rgb(148, 11, 148);
+    margin: 10px;
+}
+
+.ball{
+    width: 20%;
+    height: 35%;
+    background: rgb(148, 11, 148);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 10px solid rgb(13, 182, 19);
+    border-radius: 50%;
+}
+
+.shut{
+    width: 260px;
+    height: 120;
+    background: transparent;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 999;
+}
+
+.shut span{
+    display: block;
+    width: 100%;
+    height: 20%;
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 0 0 60% 60%;
+    transition: 0.4s all;
+}
+
+@keyframes blink {
+    0% {
+        height: 20%;
+    }
+    50% {
+        height: 100%;
+    }
+    100% {
+        height: 20%;
+    }
+}
+
+.eye:hover > .shut span {
+    height: 100%;
 }
