--- a/src/pages/auth/authPage.css
+++ b/src/pages/auth/authPage.css
@@ -25,7 +25,7 @@ img{
 
 .login-container,
 .register-container {
-    background-color: rgba(255, 255, 255, 0.5); /* Fondo semitransparente */
+    background-color: rgba(255, 255, 255, 0.5);
     width: 60%;
     margin: 0 auto;
     border: 1px solid #ccc;
@@ -38,6 +38,13 @@ img{
     box-shadow: 10px 10px 10px #000;
     padding: 25px;
     color: rgb(148, 11, 148);
+    justify-content: center;
+}
+
+.error-message {
+    font-size: 14px;
+    color: red;
+    margin-top: 5px;
 }
 
 label{
@@ -102,10 +109,13 @@ label{
     margin-right: 4px;
 }
 
+.auth-form span{
+    align-items: center; /* Alinea los elementos horizontalmente */
+    justify-content: center;}
+
 .auth-form button {
     cursor: pointer;
     background-color: rgb(13, 182, 19);
-    /* Twitch Purple */
     color: #fff;
     border: none;
     border-radius: 8px;
@@ -152,65 +162,4 @@ label{
 .auth-form-validation-message {
     width: 400px;
     background-color: #fff;
-}
-
-.eye{
-    width: 100px;
-    height: 50px;
-    background: transparent;
-    display: inline-block;
-    border-radius: 50%;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-    border: 1px solid rgb(148, 11, 148);
-    margin: 10px;
-}
-
-.ball{
-    width: 20%;
-    height: 35%;
-    background: rgb(148, 11, 148);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 10px solid rgb(13, 182, 19);
-    border-radius: 50%;
-}
-
-.shut{
-    width: 260px;
-    height: 120;
-    background: transparent;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 999;
-}
-
-.shut span{
-    display: block;
-    width: 100%;
-    height: 20%;
-    background: rgba(255, 255, 255, 0.5);
-    border-radius: 0 0 60% 60%;
-    transition: 0.4s all;
-}
-
-@keyframes blink {
-    0% {
-        height: 20%;
-    }
-    50% {
-        height: 100%;
-    }
-    100% {
-        height: 20%;
-    }
-}
-
-.eye:hover > .shut span {
-    height: 100%;
 }
