--- a/src/pages/dashboard/dashboardPage.css
+++ b/src/pages/dashboard/dashboardPage.css
@@ -1,8 +1,38 @@
 .dashboard-container {
     display: flex;
-    justify-content: center;
-    width: 100%;
     height: 100vh;
+    overflow: hidden;
+}
+
+.dashboard-container ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    animation: cambio 30s infinite linear;
+}
+
+.dashboard-container ul li {
+    width: 100vw;
+    flex: 0 0 auto;
+}
+
+.dashboard-container ul li img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0%;
+}
+
+@keyframes cambio {
+    0% { margin-left: 0; }
+    15% { margin-left: 0; }
+    20% { margin-left: -100%; }
+    40% { margin-left: -100%; }
+    45% { margin-left: -200%; }
+    65% { margin-left: -200%; }
+    70% { margin-left: -300%; }
+    100% { margin-left: -300%; }
 }
 
 .nav-container {
