--- a/src/components/css/HotelCard.css
+++ b/src/components/css/HotelCard.css
@@ -13,11 +13,17 @@
     transform: scale(1.05);
 }
 
+.image-container {
+    width: 83vh;
+    height: auto;
+    overflow: hidden;
+}
+
 .hotel-image {
     width: 100%;
-    height: 200px;
-    object-fit: cover;
+    height: auto;
 }
+
 
 .hotel-info {
     padding: 16px;
