--- a/src/pages/we/We.css
+++ b/src/pages/we/We.css
@@ -1,11 +1,14 @@
+/* Estilos para el contenedor del navbar */
 .navContainer {
+    background-color: #fff;
+    height: 6%;
+    border: transparent;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    background-color: #333;
-    padding: 10px;
+    padding: 0 20px;
 }
 
+/* Estilos para los enlaces del navbar */
 .navContainer ul {
     list-style: none;
     display: flex;
@@ -13,21 +16,52 @@
 }
 
 .navContainer ul li a {
-    color: #fff;
+    color: #5025DB;
     text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    transition: color 0.2s;
 }
 
+.navContainer ul li a:hover {
+    color: #0BC64E;
+}
+
+/* Estilos para el logo de usuario */
 .user img {
-    width: 40px;
-    height: 40px;
+    height: 80%;
+    width: auto;
     border-radius: 50%;
+    margin-right: 20px;
 }
 
+/* Estilos para la sección "Sobre nosotros" */
 .about-us {
     padding: 20px;
     text-align: center;
 }
 
+.about-us h1, .about-us h2 {
+    color: #5025DB;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.about-us p {
+    color: #555;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.about-us a {
+    color: #5025DB;
+    text-decoration: none;
+    transition: color 0.2s;
+}
+
+.about-us a:hover {
+    color: #0BC64E;
+    text-decoration: underline;
+}
+
+/* Estilos para el equipo */
 .team {
     display: flex;
     justify-content: space-around;
@@ -45,19 +79,12 @@
     border-radius: 50%;
 }
 
-h1, h2 {
-    color: #333;
+.team-member h3 {
+    color: #5025DB;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-p {
+.team-member p {
     color: #555;
-}
-
-a {
-    color: #0066cc;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
+    font-family: Arial, Helvetica, sans-serif;
 }
