--- a/src/pages/we/We.css
+++ b/src/pages/we/We.css
@@ -1,4 +1,3 @@
-/* Estilos para el contenedor del navbar */
 .navContainer {
     background-color: #fff;
     height: 6%;
@@ -8,7 +7,6 @@
     padding: 0 20px;
 }
 
-/* Estilos para los enlaces del navbar */
 .navContainer ul {
     list-style: none;
     display: flex;
@@ -26,7 +24,6 @@
     color: #0BC64E;
 }
 
-/* Estilos para el logo de usuario */
 .user img {
     height: 80%;
     width: auto;
@@ -34,10 +31,12 @@
     margin-right: 20px;
 }
 
-/* Estilos para la sección "Sobre nosotros" */
 .about-us {
     padding: 20px;
     text-align: center;
+    background-color: rgba(255, 255, 255, 0.8); 
+    border-radius: 10px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 }
 
 .about-us h1, .about-us h2 {
@@ -61,16 +60,17 @@
     text-decoration: underline;
 }
 
-/* Estilos para el equipo */
 .team {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap; 
     margin: 20px 0;
 }
 
 .team-member {
     text-align: center;
     max-width: 200px;
+    margin: 10px; 
 }
 
 .team-member img {
